--- a/public/Signup.html
+++ b/public/Signup.html
@@ -1,58 +1,133 @@
-<html>
-<head>
-<title>Sign up page</title>
- <meta name="viewport" content="width=device-width,intial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" media="screen and (min-width: 500px)" type="text/css" href="/css/signup.css">
-<link rel="stylesheet" media="screen and (max-width: 499px)" type="text/css" href="/css/msignup.css">
-<link rel="icon" href="icon.png" type="image/png">
-<script src="/js/signup.js"></script>
-</head>
-<body>
-<form action="/create-account" method="POST">
-<div class="form-box">
-<h1>Sign up</h1>
-<div class="input-box">
-<i class="fa fa-user-circle" style="color:orange;"></i>&nbsp;
-<input type="text" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="First Name" name="firstName" required>
-</div>
-<div class="input-box">
-<i class="fa fa-user-circle" style="color:orange;"></i>&nbsp;
-<input type="text" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="Last name" name="lastName" required>
-</div>
-<div class="input-box">
-<i class="fa fa-envelope" style="color:orange;"></i>&nbsp;
-<input type="email" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="Email" name="email" required>
-</div>
-<div class="input-box">
-<i class="fa fa-mobile" style="font-size:23px;color:orange;"></i>&nbsp;
-<input type="text" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="Mobile Number(10 digit only)" name="phoneNumber" pattern="[0-9]{10}" maxlength="10" required>
-</div>
-<div class="input-box">
-<i class="fa fa-key" style="color:orange;"></i>&nbsp;
-<input type="password" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="Password ( min 6 characters )" id="myInput" name="password" minlength="6" required>
-<span class="eye" onclick="myFunction()">
-<i id="hide1" class="fa fa-eye" style="color:orange;"></i>
-<i id="hide2" class="fa fa-eye-slash" style="color:orange;"></i>
-</span>
-</div>
-<p>Security Question:
-<select name="securityQuestion">
-<option>What is your Birth place?</option>
-<option>What is your Nick name?</option>
-<option>What is your School name?</option>
-</select>
-</p>
-<div class="input-box">
-<i class="fa fa-hand-o-right" style="color:orange;"></i>&nbsp;
-<input type="text" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 20px;" placeholder="Security answer" name="securityAnswer" required>
-</div>
-<input type="submit" value="Create acount" id="button"/>
-</form>
-<h3><a href="login.html">LOGIN</a></h3>
-<h2><a href="intro.html">HOME</a></h2>
-<br/>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+     <head>
+          <meta charset="UTF-8" />
+          <meta
+               name="viewport"
+               content="width=device-width, initial-scale=1.0"
+          />
+          <title>Sign up</title>
+          <link
+               rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Karla|Goldman|Poppins|Nunito"
+          />
+          <link
+               rel="stylesheet"
+               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+          />
+          <script src="/js/signup.js"></script>
+          <link
+               rel="stylesheet"
+               media="screen and (min-width: 500px)"
+               type="text/css"
+               href="/css/signup.css"
+          />
+          <link
+               rel="stylesheet"
+               media="screen and (max-width: 499px)"
+               type="text/css"
+               href="/css/msignup.css"
+          />
+         <link rel="icon" href="icon.png" type="image/png" />
+     </head>
+     <body>
+          <div class="container">
+               <div class="login-box">
+                    <form action="/create-account" method="POST">
+                         <h1>Sign up</h1>
+                         <br />
+                         <div class="input-box">
+                              <h2>Username</h2>
+                              <i class="fa fa-envelope icon"></i>
+                              <input
+                                   type="email"
+                                   placeholder="email"
+                                   name="email"
+                                   required
+                              /><br />
+                              <h2>Password</h2>
+                              <i class="fa fa-lock icon"></i>
+                              <input
+                                   type="password"
+                                   placeholder="password"
+                                   id="myInput"
+                                   name="password"
+                                   minlength="6"
+                                   required
+                              />
+                              <span class="eye" onclick="myFunction()">
+                                   <i
+                                        id="hide1"
+                                        class="far fa-eye"
+                                        style="
+                                             color: white;
+                                             padding-left: 5px;
+                                             padding-top: 5px;
+                                        "
+                                   ></i>
+                                   <i
+                                        id="hide2"
+                                        class="fa fa-eye-slash"
+                                        style="
+                                             color: white;
+                                             padding-left: 5px;
+                                             padding-top: 5px;
+                                        "
+                                   ></i>
+                              </span>
+                              <h2>First name</h2>
+                              <i class="fas fa-user-secret icon"></i>
+                              <input
+                                   type="text"
+                                   placeholder="First name"
+                                   name="firstName"
+                                   required
+                              /><br />
+                              <h2>Last name</h2>
+                              <i class="fas fa-user-secret icon"></i>
+                              <input
+                                   type="text"
+                                   placeholder="Last name"
+                                   name="lastName"
+                                   required
+                              /><br />
+                              <h2>Phone number</h2>
+                              <i class="fas fa-phone-alt icon"></i>
+                              <input
+                                   type="text"
+                                   placeholder="Mobile Number(10 digit only)"
+                                   name="phoneNumber"
+                                   pattern="[0-9]{10}"
+                                   maxlength="10"
+                                   required
+                              />
+                              <br />
+                              <h2>Security Question:</h2>
+                              <select name="securityQuestion">
+                                   <option>What is your Birth place?</option>
+                                   <option>What is your Nick name?</option>
+                                   <option>What is your School name?</option>
+                              </select>
+                              <br />
+                              <h2>Security answer</h2>
+                              <i class="far fa-keyboard icon"></i>
+                              <input
+                                   type="text"
+                                   placeholder="Security answer"
+                                   name="securityAnswer"
+                                   required
+                              />
 
-</body>
+                              <br /><br /><br />
+                              <input
+                                   type="submit"
+                                   value="Sign up"
+                                   id="button"
+                              />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                              <a href="login.html">Login?</a>
+                         </div>
+                    </form>
+               </div>
+          </div>
+     </body>
 </html>
