--- a/public/Signup.html
+++ b/public/Signup.html
@@ -28,105 +28,116 @@
                type="text/css"
                href="/css/msignup.css"
           />
-         <link rel="icon" href="icon.png" type="image/png" />
+          <link rel="icon" href="icon.png" type="image/png" />
      </head>
      <body>
-          <div class="container">
-               <div class="login-box">
-                    <form action="/create-account" method="POST">
-                         <h1>Sign up</h1>
-                         <br />
-                         <div class="input-box">
-                              <h2>Username</h2>
-                              <i class="fa fa-envelope icon"></i>
-                              <input
-                                   type="email"
-                                   placeholder="email"
-                                   name="email"
-                                   required
-                              /><br />
-                              <h2>Password</h2>
-                              <i class="fa fa-lock icon"></i>
-                              <input
-                                   type="password"
-                                   placeholder="password"
-                                   id="myInput"
-                                   name="password"
-                                   minlength="6"
-                                   required
-                              />
-                              <span class="eye" onclick="myFunction()">
-                                   <i
-                                        id="hide1"
-                                        class="far fa-eye"
-                                        style="
-                                             color: white;
-                                             padding-left: 5px;
-                                             padding-top: 5px;
-                                        "
-                                   ></i>
-                                   <i
-                                        id="hide2"
-                                        class="fa fa-eye-slash"
-                                        style="
-                                             color: white;
-                                             padding-left: 5px;
-                                             padding-top: 5px;
-                                        "
-                                   ></i>
-                              </span>
-                              <h2>First name</h2>
-                              <i class="fas fa-user-secret icon"></i>
-                              <input
-                                   type="text"
-                                   placeholder="First name"
-                                   name="firstName"
-                                   required
-                              /><br />
-                              <h2>Last name</h2>
-                              <i class="fas fa-user-secret icon"></i>
-                              <input
-                                   type="text"
-                                   placeholder="Last name"
-                                   name="lastName"
-                                   required
-                              /><br />
-                              <h2>Phone number</h2>
-                              <i class="fas fa-phone-alt icon"></i>
-                              <input
-                                   type="text"
-                                   placeholder="Mobile Number"
-                                   name="phoneNumber"
-                                   pattern="[0-9]{10}"
-                                   maxlength="10"
-                                   required
-                              />
+          <div class="section">
+               <div classs="video-container">
+                    <video autoplay loop muted>
+                         <source src="/css/back.mp4" type="video/mp4" />
+                    </video>
+               </div>
+               <div class="container">
+                    <div class="login-box">
+                         <form action="/create-account" method="POST">
+                              <h1>Sign up</h1>
                               <br />
-                              <h2>Security Question:</h2>
-                              <select name="securityQuestion">
-                                   <option>What is your Birth place?</option>
-                                   <option>What is your Nick name?</option>
-                                   <option>What is your School name?</option>
-                              </select>
-                              <br />
-                              <h2>Security answer</h2>
-                              <i class="far fa-keyboard icon"></i>
-                              <input
-                                   type="text"
-                                   placeholder="Security answer"
-                                   name="securityAnswer"
-                                   required
-                              />
+                              <div class="input-box">
+                                   <h2>Username</h2>
+                                   <i class="fa fa-envelope icon"></i>
+                                   <input
+                                        type="email"
+                                        placeholder="email"
+                                        name="email"
+                                        required
+                                   /><br />
+                                   <h2>Password</h2>
+                                   <i class="fa fa-lock icon"></i>
+                                   <input
+                                        type="password"
+                                        placeholder="password"
+                                        id="myInput"
+                                        name="password"
+                                        minlength="6"
+                                        required
+                                   />
+                                   <span class="eye" onclick="myFunction()">
+                                        <i
+                                             id="hide1"
+                                             class="far fa-eye"
+                                             style="
+                                                  color: white;
+                                                  padding-left: 5px;
+                                                  padding-top: 5px;
+                                             "
+                                        ></i>
+                                        <i
+                                             id="hide2"
+                                             class="fa fa-eye-slash"
+                                             style="
+                                                  color: white;
+                                                  padding-left: 5px;
+                                                  padding-top: 5px;
+                                             "
+                                        ></i>
+                                   </span>
+                                   <h2>First name</h2>
+                                   <i class="fas fa-user-secret icon"></i>
+                                   <input
+                                        type="text"
+                                        placeholder="First name"
+                                        name="firstName"
+                                        required
+                                   /><br />
+                                   <h2>Last name</h2>
+                                   <i class="fas fa-user-secret icon"></i>
+                                   <input
+                                        type="text"
+                                        placeholder="Last name"
+                                        name="lastName"
+                                        required
+                                   /><br />
+                                   <h2>Phone number</h2>
+                                   <i class="fas fa-phone-alt icon"></i>
+                                   <input
+                                        type="text"
+                                        placeholder="Mobile Number"
+                                        name="phoneNumber"
+                                        pattern="[0-9]{10}"
+                                        maxlength="10"
+                                        required
+                                   />
+                                   <br />
+                                   <h2>Security Question:</h2>
+                                   <select name="securityQuestion">
+                                        <option>
+                                             What is your Birth place?
+                                        </option>
+                                        <option>What is your Nick name?</option>
+                                        <option>
+                                             What is your School name?
+                                        </option>
+                                   </select>
+                                   <br />
+                                   <h2>Security answer</h2>
+                                   <i class="far fa-keyboard icon"></i>
+                                   <input
+                                        type="text"
+                                        placeholder="Security answer"
+                                        name="securityAnswer"
+                                        required
+                                   />
 
-                              <br /><br /><br />
-                              <input
-                                   type="submit"
-                                   value="Sign up"
-                                   id="button"
-                              />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                              <a href="login.html">Login?</a>
-                         </div>
-                    </form>
+                                   <br /><br /><br />
+                                   <input
+                                        type="submit"
+                                        value="Sign up"
+                                        id="button"
+                                   />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                   <a href="login.html">Login?</a>
+                              </div>
+                         </form>
+                    </div>
                </div>
           </div>
      </body>
