--- a/public/intro.html
+++ b/public/intro.html
@@ -23,6 +23,7 @@
                rel="stylesheet"
                href="https://fonts.googleapis.com/css?family=Open+Sans|Goldman&effect=anaglyph|fire"
           />
+          <link rel="icon" href="icon.png" type="image/png" />
           <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
           <script src="format.js"></script>
      </head>
