--- a/public/login.html
+++ b/public/login.html
@@ -34,7 +34,7 @@
           <div class="container">
                <div class="login-box">
                     <form action="/find-account" method="POST">
-                         <h1 class="font-effect-anaglyph">Login</h1>
+                         <h1 class="font-effect-fire">Login</h1>
                          <br />
                          <div class="input-box">
                               <h2>Username</h2>
