--- a/public/Signup.html
+++ b/public/Signup.html
@@ -9,7 +9,7 @@
           <title>Sign up</title>
           <link
                rel="stylesheet"
-               href="https://fonts.googleapis.com/css?family=Poppins|Open+Sans&effect=anaglyph|outline"
+               href="https://fonts.googleapis.com/css?family=Poppins|Open+Sans|Goldman&effect=anaglyph|outline|shadow-multiple"
           />
           <link
                rel="stylesheet"
@@ -34,7 +34,7 @@
                <div class="container">
                     <div class="login-box">
                          <form action="/create-account" method="POST">
-                              <h1 class="font-effect-outline">Sign up</h1>
+                              <h1 class="font-effect-shadow-multiple">Sign up</h1>
                               <br />
                               <div class="input-box">
                                    <h2>Username</h2>
