--- a/public/invalidPassword.html
+++ b/public/invalidPassword.html
@@ -1,14 +1,40 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
      <head>
-          <title>Incorrect Password</title>
-          <link rel="stylesheet" href="/css/status.css" />
-          <meta name="viewport" content="width="device-width,intial-scale=1.0">
+          <meta charset="UTF-8" />
+          <meta
+               name="viewport"
+               content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
+          />
+          <title>Login</title>
+          <link
+               rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire|3d|wallpaper"
+          />
+          <link
+               rel="stylesheet"
+               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+          />
           <link rel="icon" href="icon.png" type="image/png" />
+          <link
+               rel="stylesheet"
+               media="screen and (min-width: 500px)"
+               type="text/css"
+               href="/css/status.css"
+          />
+          <link
+               rel="stylesheet"
+               media="screen and (max-width: 499px)"
+               type="text/css"
+               href="/css/mstatus.css"
+          />
      </head>
      <body>
-          <h1>Incorrect password!!</h1>
-          <form action="login.html">
-               <input type="submit" value="Login Again" id="button" />
-          </form>
+          <div class="container">
+               <h1 class="font-effect-shadow-multiple">Invalid Password</h1>
+               <form action="login.html">
+                  <input type="submit" value="Login Again" id="button" />
+               </form>
+          </div>
      </body>
 </html>
