--- a/public/invalidPassword.html
+++ b/public/invalidPassword.html
@@ -6,7 +6,7 @@
                name="viewport"
                content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
           />
-          <title>Login</title>
+          <title>Invalid Password</title>
           <link
                rel="stylesheet"
                href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire|3d|wallpaper"
