--- a/public/invalidPassword.html
+++ b/public/invalidPassword.html
@@ -4,17 +4,14 @@
           <meta charset="UTF-8" />
           <meta
                name="viewport"
-               content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
+               content="width=device-width, initial-scale=1.0"
           />
           <title>Invalid Password</title>
           <link
                rel="stylesheet"
                href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire|3d|wallpaper"
           />
-          <link
-               rel="stylesheet"
-               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-          />
+          
           <link rel="icon" href="icon.png" type="image/png" />
           <link
                rel="stylesheet"
