--- a/public/invalidCurrentPassword.html
+++ b/public/invalidCurrentPassword.html
@@ -1,14 +1,37 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
      <head>
-          <title>Incorrect password</title>
-          <meta name="viewport" content="width="device-width,intial-scale=1.0">
-          <link rel="stylesheet" href="/css/status.css" />
+          <meta charset="UTF-8" />
+          <meta
+               name="viewport"
+               content="width=device-width, initial-scale=1.0"
+          />
+          <title>Incorrect Password</title>
+          <link
+               rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire|3d|wallpaper"
+          />
           <link rel="icon" href="icon.png" type="image/png" />
+          <link
+               rel="stylesheet"
+               media="screen and (min-width: 500px)"
+               type="text/css"
+               href="/css/status.css"
+          />
+          <link
+               rel="stylesheet"
+               media="screen and (max-width: 499px)"
+               type="text/css"
+               href="/css/mstatus.css"
+          />
      </head>
      <body>
-          <h1>Your current password is incorrect !!</h1>
-          <form action="/changePassword" method="GET">
-               <input type="submit" value="Try again" id="button" />
-          </form>
+          <div class="container">
+               <h1 class="font-effect-shadow-multiple">Incorrect Current Password</h1>
+                 <form action="/changePassword" method="GET">
+                   <input type="submit" value="Try again" id="button" />
+                </form>
+          </div>
      </body>
 </html>
+
