--- a/public/invalidPassword.html
+++ b/public/invalidPassword.html
@@ -29,7 +29,7 @@
      <body>
           <div class="container">
                <h1 class="font-effect-shadow-multiple">Invalid Password</h1>
-               <form action="login.html">
+               <form action="login.html" method="GET">
                   <input type="submit" value="Login Again" id="button" />
                </form>
           </div>
