--- a/public/passwordChangeSuccess.html
+++ b/public/passwordChangeSuccess.html
@@ -1,14 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
      <head>
-          <title>success</title>
-          <meta name="viewport" content="width="device-width,intial-scale=1.0">
-          <link rel="stylesheet" href="/css/status.css" />
+          <meta charset="UTF-8" />
+          <meta
+               name="viewport"
+               content="width=device-width, initial-scale=1.0"
+          />
+          <title>Success</title>
+          <link
+               rel="stylesheet"
+               href="https://fonts.googleapis.com/css?family=Poppins|Goldman|karla|Open+Sans&effect=anaglyph|shadow-multiple|outline|neon|fire|3d|wallpaper"
+          />
           <link rel="icon" href="icon.png" type="image/png" />
+          <link
+               rel="stylesheet"
+               media="screen and (min-width: 500px)"
+               type="text/css"
+               href="/css/status.css"
+          />
+          <link
+               rel="stylesheet"
+               media="screen and (max-width: 499px)"
+               type="text/css"
+               href="/css/mstatus.css"
+          />
      </head>
      <body>
-          <h1>Password changed successfully</h1>
-          <form action="/selectOption" method="GET">
-               <input type="submit" value="Select Option" id="button" />
-          </form>
+          <div class="container">
+               <h1 class="font-effect-shadow-multiple">Success</h1>
+                <form action="/selectOption" method="GET">
+                  <input type="submit" value="Select Option" id="button" />
+                </form>
+          </div>
      </body>
 </html>
