--- a/public/login.html
+++ b/public/login.html
@@ -68,7 +68,7 @@
                                              padding-top: 5px;
                                         "
                                    ></i> </span
-                              ><a href="Signup.html">Forgot password?</a><br /><br /><br />
+                              ><br /><a href="Signup.html">Forgot password?</a><br /><br /><br />
                               <input type="submit" value="Login" id="button" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                               <a href="Signup.html">New User?</a>
                          </div>
