--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
           <meta charset="UTF-8" />
           <meta
                name="viewport"
-               content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
+               content="width=device-width, initial-scale=1.0"
           />
           <title>Login</title>
           <link
@@ -68,7 +68,7 @@
                                              padding-top: 5px;
                                         "
                                    ></i> </span
-                              ><br /><a href="Signup.html">Forgot password?</a><br /><br /><br />
+                              ><br /><a href="setPassword.html">Forgot password?</a><br /><br /><br />
                               <input type="submit" value="Login" id="button" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                               <a href="Signup.html">New User?</a>
                          </div>
