--- a/public/noAddress.html
+++ b/public/noAddress.html
@@ -24,8 +24,17 @@
                type="text/css"
                href="/css/mstatus.css"
           />
+           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+          <script>
+               $(window).on("load", function () {
+                    $(".loader-wrapper").fadeOut("slow");
+               });
+          </script>
      </head>
      <body>
+          <div class="loader-wrapper" id="loader-wrapper">
+               <span class="loader"><span class="loader-inner"></span></span>
+          </div>
           <div class="container">
                <h1 class="font-effect-shadow-multiple">No Registered Address</h1>
                  <form action="/owner" method="GET">
